# rhumba

./: .Rbuildignore  .appveyor.yml  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac  configure.win  environment-dev.yml  rhumba.Rproj
.github/workflows/: check_pkg.yml
R/: RcppExports.R  mamba-package.R  rhumba-package.R
data/: MAMBA_ADD_PIP_AS_PYTHON_DEPENDENCY.rda  MAMBA_ALWAYS_YES.rda  MAMBA_AUTO_ACTIVATE_BASE.rda  MAMBA_CHANGE_PS1.rda  MAMBA_DEV.rda  MAMBA_DRY_RUN.rda  MAMBA_JSON.rda  MAMBA_KEEP_TEMP_DIRECTORIES.rda  MAMBA_KEEP_TEMP_FILES.rda  MAMBA_NO_PROGRESS_BARS.rda  MAMBA_OFFLINE.rda  MAMBA_ON_CI.rda  MAMBA_QUIET.rda  MAMBA_USE_INDEX_CACHE.rda
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  caramba.cpp  rhumba.cpp
